--- a/Scripts/drug_utilization.ipynb
+++ b/Scripts/drug_utilization.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 2,
    "id": "829850e1",
    "metadata": {},
    "outputs": [],
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 3,
    "id": "6c9c88eb",
    "metadata": {},
    "outputs": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 4,
    "id": "6f2fad59",
    "metadata": {},
    "outputs": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 5,
    "id": "a5b70c80",
    "metadata": {},
    "outputs": [],
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 6,
    "id": "6f47eb77",
    "metadata": {},
    "outputs": [
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 7,
    "id": "ad758f38",
    "metadata": {},
    "outputs": [],
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 8,
    "id": "1ffe8aad",
    "metadata": {},
    "outputs": [
@@ -224,7 +224,7 @@
        "216       /nchs/pressroom/states/kentucky/kentucky.htm  "
       ]
      },
-     "execution_count": 92,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 9,
    "id": "b53e0b75",
    "metadata": {},
    "outputs": [
@@ -330,7 +330,7 @@
        "231         /nchs/pressroom/states/newyork/newyork.htm  "
       ]
      },
-     "execution_count": 93,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 10,
    "id": "3e734821",
    "metadata": {},
    "outputs": [
@@ -434,7 +434,7 @@
        "233  /nchs/pressroom/states/northdakota/northdakota...  "
       ]
      },
-     "execution_count": 94,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -445,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 11,
    "id": "be42cfe7",
    "metadata": {},
    "outputs": [
@@ -538,7 +538,7 @@
        "226       /nchs/pressroom/states/nebraska/nebraska.htm  "
       ]
      },
-     "execution_count": 95,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -549,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 12,
    "id": "fcfae353",
    "metadata": {},
    "outputs": [
@@ -851,7 +851,7 @@
        "[2282565 rows x 15 columns]"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -866,7 +866,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 13,
    "id": "9fa34696",
    "metadata": {},
    "outputs": [],
@@ -880,7 +880,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 14,
    "id": "9e817fec",
    "metadata": {},
    "outputs": [],
@@ -902,7 +902,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 15,
+   "id": "1dfb4f47",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<StringArray>\n",
+       "[  'DIAZEPAM', 'KLONOPIN 1',  'LORAZEPAM', 'MORPHINE S',  'METHADONE',\n",
+       "  'Oxycodone', 'ALPRAZOLAM', 'MORPHINE 1', 'FENTANYL C', 'FENTANYL 1',\n",
+       " ...\n",
+       "  'ATIVAN .5', 'MORPHINE 0', 'OPANA (OXY', 'FENTANYL 8',  'XANAX 1.0',\n",
+       "     'VALIUM',     'AVINZA', 'OPANA 10 M', 'OPANA 10MG',  'AVINZA 90']\n",
+       "Length: 114, dtype: string"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "opioids_2016['Product Name'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "id": "c3d4fbe8",
    "metadata": {},
    "outputs": [
@@ -928,7 +955,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 17,
    "id": "2ab18963",
    "metadata": {},
    "outputs": [
@@ -942,7 +969,7 @@
        "       'OR', 'WI', 'RI', 'WY', 'ME', 'VT', 'MT'], dtype=object)"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -955,7 +982,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 18,
    "id": "3a57d89a",
    "metadata": {},
    "outputs": [],
@@ -971,7 +998,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 19,
    "id": "dc9c22b4",
    "metadata": {},
    "outputs": [],
@@ -985,7 +1012,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 20,
    "id": "66a37f53",
    "metadata": {},
    "outputs": [],
@@ -999,7 +1026,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 21,
    "id": "79e6841e",
    "metadata": {},
    "outputs": [],
@@ -1018,7 +1045,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 22,
    "id": "e8a780cf",
    "metadata": {},
    "outputs": [
@@ -1136,7 +1163,7 @@
        "8                  592798.0               125.380288  "
       ]
      },
-     "execution_count": 105,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1147,7 +1174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 23,
    "id": "a29561b4",
    "metadata": {},
    "outputs": [
@@ -1258,7 +1285,7 @@
        "44    VT                  59596.0               476.768000  "
       ]
      },
-     "execution_count": 106,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1269,7 +1296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 24,
    "id": "c14c3aa9",
    "metadata": {},
    "outputs": [
@@ -1387,7 +1414,7 @@
        "8                  552380.0               108.565252  "
       ]
      },
-     "execution_count": 107,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1398,7 +1425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 25,
    "id": "c8b8dbc5",
    "metadata": {},
    "outputs": [
@@ -1509,7 +1536,7 @@
        "42    TX                 362170.0               120.522463  "
       ]
      },
-     "execution_count": 108,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1520,7 +1547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 26,
    "id": "b03ebd96",
    "metadata": {},
    "outputs": [
@@ -1631,7 +1658,7 @@
        "2     AZ                 167724.0                87.951757  "
       ]
      },
-     "execution_count": 109,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1642,7 +1669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 27,
    "id": "606b4a13",
    "metadata": {},
    "outputs": [
@@ -1753,7 +1780,7 @@
        "42    TX                 290862.0                69.717641  "
       ]
      },
-     "execution_count": 110,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
